# neighborly

./: .editorconfig  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.bib  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg
docs/: README.md  character_behavior.rst  conf.py  index.md  index.rst  neighborly.ai.rst  neighborly.core.character.rst  neighborly.core.rst  neighborly.core.utils.rst  neighborly.core.utils.tracery.rst  neighborly.data.rst  neighborly.plugins.default_plugin.rst  neighborly.plugins.rst  neighborly.rst  package-lock.json  package.json  references.md
docs/source/: actions.rst  activities.rst  beliefs.rst  businesses.rst  characters.rst  commandline_tool.rst  conf.py  content_management.rst  data_collection.rst  design-tips.rst  design_justifications.rst  ecs.rst  effects-and-preconditions.rst  event_driven_architecture.rst  getting-started.rst  goals_and_actions.rst  households.rst  how-does-it-work.rst  how-to.rst  index.rst  installation.rst  life_events.rst  location-preferences.rst  location_biases.rst  locations.rst  plugins.rst  relationships.rst  requirements.txt  residences.rst  routines.rst  settlements.rst  skills.rst  social_rules.rst  stats.rst  statuses.rst  tracking_backstories.rst  traits.rst  working_with_ecs.rst
docs/source/api/: modules.rst  neighborly.components.rst  neighborly.defs.rst  neighborly.effects.rst  neighborly.events.rst  neighborly.factories.rst  neighborly.helpers.rst  neighborly.plugins.rst  neighborly.preconditions.rst  neighborly.rst
docs/source/how_to/: how-to-add-beliefs.rst  how-to-add-businesses.rst  how-to-add-characters.rst  how-to-add-districts.rst  how-to-add-effects.rst  how-to-add-job-roles.rst  how-to-add-life-events.rst  how-to-add-location-preferences.rst  how-to-add-name-factories.rst  how-to-add-preconditions.rst  how-to-add-settlements.rst  how-to-add-skills.rst  how-to-add-species.rst  how-to-add-traits.rst  how-to-create-actions.rst  how-to-create-custom-components.rst  how-to-create-custom-systems.rst
docs/source/module_docs/: neighborly.components.rst  neighborly.core.ai.rst  neighborly.core.ecs.rst  neighborly.core.rst  neighborly.factories.rst  neighborly.plugins.defaults.rst  neighborly.plugins.rst  neighborly.plugins.talktown.rst  neighborly.rst  neighborly.utils.rst
notebooks/: basic_simulation.ipynb  batch_runner_example.ipynb  sample.ipynb  sample_plugin.py
samples/: addition_removal_detection.py  all_data.xml  all_data.yaml  authoring_structures.py  behavior_authoring.py  behaviors.xml  data_collection.py  data_pipeline.py  demon_slayer.py  event_generator.py  generating_characters.py  inheritance_system.py  initialization_systems.py  john_wick.py  life_events.py  location_bias_rules.py  lod_and_patterns.py  lod_generator.py  manual_life_events.py  name_creation.py  pattern_queries.py  patterns.py  profiling.py  revised_relationship_model.py  revised_role_binding.py  role_queries.py  sample.py  sample_01.py  sample_02.py  sample_03.py  sample_04.py  sample_config.yaml  scratch_character_gen.py  server.py  simple_sim.py  simulation_time.py  status_prototyping.py  talktown.py  test_config_failutre.py  using_authored_characters.py  (+4 more)
samples/john_wick/: README.md  data.yaml  john_wick.py
samples/notebooks/: basic_simulation.ipynb  character_generation.ipynb  data_collection.ipynb  demon_slayer.ipynb  gui.py  life_span_system.ipynb  relationship_growth.ipynb  sample.ipynb  talk_of_the_town.ipynb
samples/notebooks/demon_slayer/: components.py  constants.py  demon_slayer.ipynb  demon_slayer.py  demon_slayer_plugin.py
samples/pygame/: data.yaml  input_handler.py  pygame_sample.py  settings.py  ui_windows.py
samples/scatches/: building_characters.py
samples/v3/: v3_playground.py
src/neighborly/: __init__.py  __main__.py  __version__.py  action.py  actions.py  archetypes.py  authoring.py  cli.py  command.py  config.py  constants.py  content_management.py  data_analysis.py  data_collection.py  datetime.py  decorators.py  definition_compiler.py  ecs.py  engine.py  event_listeners.py  events.py  exporter.py  goals.py  inspection.py  inspection_tools.py  inventory.py  inventory_system.py  libraries.py  life_event.py  loaders.py  location_preference.py  prefabs.py  query.py  relationship.py  role_system.py  roles.py  server.py  settlement.py  simulation.py  spawn_table.py  (+10 more)
src/neighborly/actions/: __init__.py  base_types.py  business.py  character.py
src/neighborly/ai/: behavior_tree.py  behavior_utils.py  brain.py  character_behavior.py  loader.py
src/neighborly/builtin/: ai.py  archetypes.py  components.py  event_callbacks.py  event_rules.py  events.py  helpers.py  life_events.py  role_filters.py  statuses.py  systems.py
src/neighborly/components/: __init__.py  activity.py  beliefs.py  business.py  character.py  culture.py  factory.py  items.py  location.py  (+12 more)
src/neighborly_viewer/: __main__.py  main_window.py
src/preconditions/: base_types.py  defaults.py
tests/: test_activity.py  test_activitytracker.py  test_behavior_tree.py  test_behaviors.py  test_business.py  test_character.py  test_character_death.py  test_character_traits.py  test_city_layout.py  test_config.py  test_datetime.py  test_definition_compiler.py  test_ecs.py  test_event.py  test_experience_management.py  test_gameobject.py  test_graph.py  test_grid.py  test_life_event.py  test_loaders.py  test_location_preferences.py  test_name_generation.py  test_query.py  test_relationship.py  test_residence.py  test_routine.py  test_settlement.py  test_simulation.py  test_social_network.py  test_spawn_table.py  test_stats.py  test_status.py  test_system.py  test_tag_selection.py  test_theme_manager.py  test_time.py  test_town.py  test_traits.py  test_utilities.py  test_utils.py  (+2 more)
tests/data/: businesses.json  character_names.tracery.json  characters.json  districts.json  job_roles.json  loader_data.yaml  residences.json  sample.tracery.json  settlement_names.tracery.json  settlements.json  skills.json  species.json  traits.json
tests/output/: test_output.json
(+314 files in other folders)
