[metadata]
name = neighborly
version = attr: neighborly.__version__
author = Shi Johnson-Bey
author_email = shijbey@ucsc.edu
description = An extensible social simulation engine for generating towns of characters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ShiJbey/neighborly
project_urls =
    Bug Tracker = https://github.com/ShiJbey/neighborly/issues
license = MIT
keywords = social simulation, emergent narrative, life simulator, multi-agent systems
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Games/Entertainment :: Simulation
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Artificial Life
    Topic :: Sociology
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    ordered-set
    tqdm
    pydantic ==1.8.2
    numpy
    PyYAML
    esper
    pyqt6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    neighborly = neighborly.__main__:main
gui_scripts =
    neighborly-viewer = neighborly_viewer.__main__:main

[options.extras_require]
tests =
    pytest
    pytest-cov
samples =
    pygame
    pygame_gui==0.6
    notebook
    jupyterlab
    ipycanvas
    ipywidgets
    matplotlib

[flake8]
exclude = build,.git,docs,tests,.vscode,.idea,
extend-ignore = E203
max-line-length = 120
max-complexity = 10

[isort]
profile = black
default_section = THIRDPARTY
known_first_party = neighborly
