[metadata]
name = neighborly
version = attr: neighborly.__version__
author = Shi Johnson-Bey
author_email = shijbey@ucsc.edu
description = An extensible social simulation framework for generating towns of characters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ShiJbey/neighborly
project_urls =
    Bug Tracker = https://github.com/ShiJbey/neighborly/issues
	Documentation = https://github.com/ShiJbey/neighborly/wiki
	Changelog = https://github.com/ShiJbey/neighborly/blob/main/CHANGELOG.md
license = MIT
keywords = social simulation, emergent narrative, life simulator, multi-agent framework
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Games/Entertainment :: Simulation
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Artificial Life
    Topic :: Sociology
    Topic :: Software Development :: Libraries
    Typing :: Typed


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    ordered-set
    pydantic ==1.8.2
    numpy
    PyYAML
    esper
    pandas

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    neighborly = neighborly.__main__:main

[options.extras_require]
tests =
    pytest
    pytest-cov
